	  - visual indicator showing which spells can be refreshed (from K-Mod)
	  - show level annotation when entering level (idea by Chris Smith)
	  - refreshing spells is allowed at all time (with prompt) (from AceHack)
	  - Automatically apply unlocking tool when trying to open a locked door
	  - Options paranoid_hit and paranoid_quit on by default

	* new dungeon features:
	  - dead trees (from NetHack Brass)

	* vanilla bug fixes:
	  - C343-74:  Entering a long running, uninterruptible command after
	              stoning starts will kill you.
	  - C343-198: Playing in a 20 or 21 line window can cause the game to
	              crash.
	  - C343-171: Silver weapon damage message is sometimes missing when
	              hero is polymorphed

	* bug fixes:
	  - HTML dump: fix crash if monster name is too long
	  - Fixed crashes when attacking long worms on flipped levels
	  - Fixed ctrl-e overwriting engraved engravings with dust messages
	  - Workaround for preventing the stairs to Vlad's tower appearing
	    in the wizard's tower
	  - Fixed breaking of pacifist conduct when killing a monster with
	    an unknown rolling boulder trap
	  - Fixed crash in wizard mode when using extmenu set to true
	  - Cheapskate shopkeepers calculated unknown gem prices as if they
	    were known.

2010-10-10  UnNetHack 3.5.3-1
	* bug fixes:
	  - Quest nemesis not carrying bell of opening
	  - Door being created in the corner of a room
	  - Mine levels being lit too often

2010-09-04  UnNetHack 3.5.3
	* Conflict makes blackmarket shopkeeper angry
	* Fully eroded armor gets destroyed
	* Lowered the needed experience level for the quest
	* HTML dump
	* Pi day support
	* Reduced Sokoban branch by one level
	* Vampires as player selectable starting race (from Slash'Em)
	* Remove instadeath poison, reduce hp and maxhp instead (from SporkHack)

	* patches:
	  - Conduct: Elbereth tracking (by Ray Kulhanek)
	  - Dungeon Map Overview 3 (by Hojita Discordia)